# codewithpaparao

./: .gitignore  config.py  pyproject.toml  requirements.txt  run.py
api/: index.py
app/: __init__.py
app/controllers/: admin_controller.py  auth_controller.py  course_controller.py  dashboard_controller.py  student_controller.py  super_admin_controller.py
app/middleware/: auth.py
app/models/: models.py
app/services/: analytics_service.py  notification_service.py  supabase_service.py
app/static/css/: components.css  layouts.css  variables.css
app/static/js/: app.js  quiz.js  theme.js
app/templates/: about.html  base.html  home.html
app/templates/admin/: analytics.html  certificates.html  reports.html  students.html
app/templates/admin/batches/: applicants.html  list.html  new.html
app/templates/admin/courses/: edit.html  list.html  manage.html  new.html
app/templates/admin/lessons/: edit.html  new.html
app/templates/admin/modules/: new.html
app/templates/admin/notifications/: broadcast.html
app/templates/admin/quizzes/: list.html  new.html  questions.html
app/templates/auth/: login.html  register.html  reset_password.html
app/templates/courses/: certificate_pdf.html  detail.html  language_detail.html  lesson.html  list.html
app/templates/dashboard/: admin.html  student.html  super_admin.html
app/templates/student/: bookmarks.html  notifications.html  profile.html  take_quiz.html
app/templates/super_admin/: logs.html  settings.html  users.html
database/: schema.sql
supabase/: config.toml
tests/: test_lms.py
