[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "codewithpaparao"
version = "0.1.0"
description = "CodeWithPapaRao SaaS Learning Portal"
requires-python = ">=3.10"
dependencies = [
    "Flask==3.0.2",
    "Flask-SQLAlchemy==3.1.1",
    "Flask-WTF==1.2.1",
    "supabase==2.3.0",
    "firebase-admin==6.4.0",
    "python-dotenv==1.0.1",
    "werkzeug==3.0.1",
    "psycopg2-binary==2.9.9",
]

[tool.setuptools]
packages = ["app"]
